# nestlist

./: README.md  flake.nix  index.html  style.css
backend/: Cargo.toml  Dockerfile  HASH  list.json  log.txt  openssl.cnf
backend/src/: cors.rs  hash.rs  init.rs  list.rs  log.rs  main.rs  routes.rs  types.rs  ws.rs
cert/: links.txt
cert/CA/: CA.key  CA.pem  CA.srl
cert/CA/localhost/: identity.pfx  localhost.crt  localhost.csr  localhost.decrypted.key  localhost.key
components/: ToshiList.js
config/: Caddyfile
demo/: README.md
frontend/: flake-mkcert.nix  index.html  list.json  style.css  test.py
frontend/components/: ToshiButton.css  ToshiItem.css  ToshiItem.html  ToshiItem.js  ToshiList.html  ToshiList.js
frontend/components/ToshiButton/: ToshiButton.html  ToshiButton.js
frontend/components/ToshiList/: ToshiList.css  ToshiList.html  ToshiList.js
frontend/components/ToshiTextArea/: ToshiTextArea.js
frontend/functions/: FetchHttp.js  insertStr.js  retrieve.js
frontend/pages/: login.html
frontend/pages/styles/: login.css
frontend/styles/: button.css  form.css
frontend/workers/: DedicatedWorkerClass.js  SocketClass.js  constants.js  worker.js
old/: ToshiItem.js  ToshiList.js  ToshiList_attempt_2.js
