[package]
name = "nestlist-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
native-tls = "0.2.11"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
